--- a/LiveMapDashboard.Web/Views/_ViewImports.cshtml
+++ b/LiveMapDashboard.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using LiveMapDashboard.Web
 @using LiveMapDashboard.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using LiveMapDashboard.Web.Options
+@using Microsoft.Extensions.Options
