--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -79,11 +79,7 @@
             <div id="alertContainer"></div>
         </div>
 
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2025 - LiveMapDashboard.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </footer>
+    <!--<script src="~/js/preline.js"></script>-->
 
         <script src="~/js/preline.js"></script>
 
