feat(form user feedback): Add better validation and error handling to the form. By default the error and success data do not survive a redirect.

--- a/LiveMapDashboard.Web/Views/Poi/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Poi/Index.cshtml
@@ -3,10 +3,16 @@
 
 <div class="max-w-4xl px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
     
-    @if (TempData["SuccessMessage"] != null)
+    @if (ViewData["SuccessMessage"] != null)
     {
         <div class="alert alert-success">
             @TempData["SuccessMessage"]
+        </div>
+    }
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @ViewData["ErrorMessage"]
         </div>
     }
 
