--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -3,11 +3,18 @@
 
 
 <div class="max-w-10xl px-4 py-10 sm:px-6 lg:px-6 lg:py-14 mx-auto">
-    @if (TempData["SuccessMessage"] != null)
+    @if (ViewData["SuccessMessage"] != null)
     {
-    <div class="alert alert-success">
-        @TempData["SuccessMessage"]
-    </div>
+        <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
+            @TempData["SuccessMessage"]
+        </div>
+    }
+    
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
+            @ViewData["ErrorMessage"]
+        </div>
     }
 
     <form method="post" asp-controller="poi">
