--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -20,13 +20,12 @@
 
         <select asp-for="Category" name="category"
                 class="border py-2.5 sm:py-2 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none">
-            <option value="test">Select a category</option>
 
-            @foreach (var category in Model.Categories)
+            @foreach (var category in Model.Categories!)
             {
-            <option value="@category.CategoryName" selected="@(Model.Category == category.CategoryName)">
-                @category.CategoryName
-            </option>
+                <option value="@category.CategoryName" selected="@(Model.Category is not null ? Model.Category == category.CategoryName : Model.Categories![0] == category)">
+                    @category.CategoryName
+                </option>
             }
         </select>
 
