--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -1,8 +1,23 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
+<div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
+    <div class="flex justify-between">
+        <a href="javascript:history.back()"
+           class="bg-transparent hover:bg-transparent px-4 py-2 text-blue-500 hover:bg-blue-600">
+            Go Back
+        </a>
+        <form method="post" asp-controller="poi" asp-action="delete">
+            @Html.AntiForgeryToken()
+            <button type="submit"
+                    class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+                Delete
+            </button>
+        </form>
+    </div>
+</div>
 
-<div class="max-w-10xl px-4 py-10 sm:px-6 lg:px-6 lg:py-14 mx-auto">
+<div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
     @if (ViewData["SuccessMessage"] != null)
     {
         <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
@@ -17,7 +32,7 @@
         </div>
     }
 
-    <form method="post" asp-controller="poi">
+    <form method="post" asp-controller="poi" asp-action="submit">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
@@ -34,13 +49,9 @@
             </div>
         </div>
         
-        <div class="mt-2 p-4 relative z-10">
-            <div class="flex justify-end gap-3">
-                <button name="action" value="delete" type="submit"
-                        class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
-                    Delete
-                </button>
-                <button name="action" value="save" type="submit"
+        <div class="mt-2 py-4 relative z-10">
+            <div class="flex justify-end gap-3 w-100">
+                <button type="submit"
                         class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
                     Save
                 </button>
