--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -20,18 +20,20 @@
 <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
     @if (ViewData["SuccessMessage"] != null)
     {
-        <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
-            @ViewData["SuccessMessage"]
-        </div>
-    }
-    
-    @if (ViewData["ErrorMessage"] != null)
-    {
-        <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
-            @ViewData["ErrorMessage"]
-        </div>
+    <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
+        @ViewData["SuccessMessage"]
+    </div>
     }
 
+    @if (ViewData["ErrorMessage"] != null)
+    {
+    <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
+        @ViewData["ErrorMessage"]
+    </div>
+    }
+</div>
+
+<div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
     <form method="post" asp-controller="poi" asp-action="submit">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
@@ -51,6 +53,9 @@
         
         <div class="mt-2 py-4 relative z-10">
             <div class="flex justify-end gap-3 w-100">
+                <div class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600" onclick="confirmLeave()">
+                    Cancel
+                </div>
                 <button type="submit"
                         class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
                     Save
@@ -59,3 +64,11 @@
         </div>
     </form>
 </div>
+
+<script>
+function confirmLeave() {
+    if (confirm("Are you sure you want to leave this page?")) {
+        window.location.href = "javascript:history.back()";
+    }
+}
+</script>
