--- a/LiveMapDashboard.Web/Views/Poi/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Poi/Index.cshtml
@@ -58,9 +58,6 @@
       href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
 
 <div class="card">
-    <div class="card-header">
-        ParkNaam
-    </div>
     <div class="card-body">
         <div class="card">
             <div id="map"></div>
@@ -68,6 +65,10 @@
         </div>
     </div>
 </div>
+
+<button type="button" id="addPOIButton" class="btn btn-primary mt-4">
+    + Locatie toevoegen
+</button>
 
 <script src="~/js/park-place-markers-maplibre.js" asp-append-version="true" type="module"></script>
 
