--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -8,11 +8,9 @@
     <title>@ViewData["Title"] - LiveMapDashboard.Web</title>
     <script type="importmap"></script>
     
+    <link href="~/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link href="~/css/styles.css" rel="stylesheet" />
-    
-    <link rel="stylesheet" href="~/LiveMapDashboard.Web.styles.css" asp-append-version="true" />
     
     <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@5.2.0/dist/maplibre-gl.css' />
     
@@ -60,8 +58,9 @@
         </div>
     </footer>
 
+    <!-- Preline -->
     <script src="~/js/preline.js"></script>
-
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
