--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
@@ -2,5 +2,47 @@
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
 <div class="bg-gray-100 border rounded-lg h-[500px] flex items-center justify-center text-gray-500 text-sm">
-    Map placeholder
+    <style>
+    .calculation-box {
+        height: 75px;
+        width: 150px;
+        position: absolute;
+        bottom: 40px;
+        left: 10px;
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 15px;
+        text-align: center;
+    }
+
+    p {
+        font-family: 'Open Sans';
+        margin: 0;
+        font-size: 13px;
+    }
+
+    .maplibregl-map {
+        height: 50vh;
+        width: 100%;
+    }
+
+    a.disabled {
+        pointer-events: none;
+        cursor: default;
+    }
+</style>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.js"></script>
+<link rel="stylesheet"
+      href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
+
+<div class="card">
+    <div class="card-body">
+        <div class="card">
+            <div id="map"></div>
+        </div>
+        </div>
+    </div>
+</div>
 </div>
