--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
@@ -38,12 +38,13 @@
 <link rel="stylesheet"
       href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
 
-<div class="card">
-    <div class="card-body">
-        <div class="card">
-            <div id="map"></div>
+
+<div class="card h-full w-full">
+        <div class="card-body h-full w-full">
+            <div class="card h-full w-full">
+                <div id="map" class="rounded-lg"></div>
+            </div>
         </div>
-        </div>
-    </div>
+</div>
 </div>
 </div>
