--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
-<div class="bg-gray-100 border rounded-lg h-[500px] flex items-center justify-center text-gray-500 text-sm">
+<div class="h-fit mt-2 ">
     <style>
     .calculation-box {
         height: 75px;
