--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_Map.cshtml
@@ -39,12 +39,9 @@
       href="https://www.unpkg.com/@@mapbox/mapbox-gl-draw@1.5.0/dist/mapbox-gl-draw.css" />
 
 
-<div class="card h-full w-full">
+    <div class="card h-full w-full z-10 bg-white border border-gray-200 dark:bg-neutral-900 dark:border-neutral-700">
         <div class="card-body h-full w-full">
-            <div class="card h-full w-full">
-                <div id="map" class="rounded-lg"></div>
-            </div>
+            <div id="map" class="rounded-lg"></div>
         </div>
-</div>
-</div>
+    </div>
 </div>
