Added button and double-click

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -46,6 +46,7 @@
             @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Map.cshtml")
             
             <div>
+                @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_LocationButton.cshtml")
                 @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_FormFields.cshtml")
                 @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_OpeningHours.cshtml")
             </div>
