feat: implement service WIP

--- a/LiveMapDashboard.Web/Views/Poi/PoiForm.cshtml
+++ b/LiveMapDashboard.Web/Views/Poi/PoiForm.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
-@model PoiListViewModel
+@model PoiCrudformViewModel
 
-@await Component.InvokeAsync("PoiList", Model)
+@await Component.InvokeAsync("PoiForm", Model)
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
