--- a/LiveMapDashboard.Web/Views/Rfc/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Rfc/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using LiveMap.Domain.Models
 @using LiveMapDashboard.Web.Models.Rfc
-@model RFCsViewModel
+@model RequestForChangeViewModel
 
 <div>
     <h1 class="text-4xl dark:text-white">Wijzigingsverzoeken</h1>
@@ -9,7 +9,7 @@
     <div class="flex flex-col">
         <div class="-m-1.5 overflow-x-auto">
             <div class="p-1.5 min-w-full inline-block align-middle">
-                @if (Model.RFCs.Length > 0)
+                @if (Model.Result.TotalCount > 0)
                 {
                     <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
 
@@ -43,7 +43,7 @@
                                 </tr>
                             </thead>
                             <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                                @foreach (RequestForChange rfc in Model.RFCs)
+                                @foreach (RequestForChange rfc in Model.Result.Items)
                                 {
                                     <tr>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
@@ -57,7 +57,7 @@
                                             }
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
-                                            @RFCsViewModel.ToDateTime(rfc.SubmittedOn)
+                                            @RequestForChangeViewModel.ToDateTime(rfc.SubmittedOn)
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
                                             <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">Aanpassen</button>
@@ -67,6 +67,114 @@
                                 }
                             </tbody>
                         </table>
+                    </div>
+                    <div class="py-1 px-4">
+                        <nav class="flex items-center gap-x-1" aria-label="Pagination">
+                            <button type="button" id="toPreviousPage" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex jusify-center items-center gap-x-2 text-sm rounded-lg text-gray-800 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10" aria-label="Previous">
+                                <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="m15 18-6-6 6-6"></path>
+                                </svg>
+                                <span class="sr-only">Previous</span>
+                            </button>
+
+                            <div class="flex items-center gap-x-1">
+
+                                @* if <= 5 dan loop 5x *@
+                                @if (Model.Result.TotalPages <= 5)
+                                {
+                                    for (int i = 0; i < Model.Result.TotalPages; i++)
+                                    {
+                                        if (i == Model.Result.CurrentPage - 1)
+                                        {
+                                            <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center bg-gray-200 text-gray-800 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-300 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-600 dark:text-white dark:focus:bg-neutral-500" aria-current="page">
+                                                @i
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10">
+                                                @i
+                                            </button>
+                                        }
+                                    }
+                                }
+                                else if (Model.Result.CurrentPage >= Model.Result.TotalPages - 3)
+                                {
+                                    for (int i = 0; i < 5; i++)
+                                    {
+                                        if (i + 5 == Model.Result.CurrentPage)
+                                        {
+                                            <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center bg-gray-200 text-gray-800 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-300 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-600 dark:text-white dark:focus:bg-neutral-500" aria-current="page">
+                                                @(i + 5)
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10">
+                                                @(i + 5)
+                                            </button>
+                                        }
+                                    }
+                                }
+                                else
+                                {
+                                    @if (Model.Result.CurrentPage != 1)
+                                    {
+                                        for (int i = Model.Result.CurrentPage - 1; i < Model.Result.CurrentPage + 2; i++)
+                                        {
+                                            if (i == Model.Result.CurrentPage)
+                                            {
+                                                <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center bg-gray-200 text-gray-800 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-300 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-600 dark:text-white dark:focus:bg-neutral-500" aria-current="page">
+                                                    @(i)
+                                                </button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10">
+                                                    @(i)
+                                                </button>
+                                            }
+                                        }
+                                    }
+                                    else
+                                    {
+                                        for (int i = 0; i < 3; i++)
+                                        {
+                                            if (i == Model.Result.CurrentPage - 1)
+                                            {
+                                                <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center bg-gray-200 text-gray-800 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-300 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-600 dark:text-white dark:focus:bg-neutral-500" aria-current="page">
+                                                    @(i + 1)
+                                                </button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="paginationClick min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10">
+                                                    @(i + 1)
+                                                </button>
+                                            }
+                                        }
+                                    }
+
+                                    <div class="inline-block">
+                                        <div class="group min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-400 p-2 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-500 dark:focus:bg-white/10">
+                                            <span class="text-xs">•••</span>
+                                        </div>
+                                    </div>
+
+                                    <button type="button" id="toLastPage" class="min-h-9.5 min-w-9.5 flex justify-center items-center text-gray-800 hover:bg-gray-100 py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10">@Model.Result.TotalPages</button>
+                                }
+                            </div>
+
+                            @if (Model.Result.CurrentPage != Model.Result.TotalPages)
+                            {
+                                <button type="button" id="toNextPage" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex jusify-center items-center gap-x-2 text-sm rounded-lg text-gray-800 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10" aria-label="Next">
+                                    <span class="sr-only">Next</span>
+                                    <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="m9 18 6-6-6-6"></path>
+                                    </svg>
+                                </button>
+                            }
+                        </nav>
                     </div>
                 }
                 else
