fix: frontend for pagination split

--- a/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                 </div>
             </nav>
         </header>
-        <div class="container w-screen" style="padding: 2rem;">
+        <div class="container w-screen m-auto" style="padding: 2rem;">
             <main role="main" class="pb-3">
                 @RenderBody()
             </main>
