--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_LocationButton.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_LocationButton.cshtml
@@ -7,7 +7,7 @@
         <button type="button"
                 class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200"
                 id="applyLocationButton">
-            + Locatie toevoegen
+            + Add location
         </button>
     </div>
 </div>
