--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_OpeningHours.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_OpeningHours.cshtml
@@ -1,9 +1,9 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
-<div class="mt-2 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 md:p-10 dark:bg-neutral-900 dark:border-neutral-700">
+<div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
     <div>
-        <label class="block mb-2 text-sm font-medium">
+        <label class="block mb-2 text-sm font-medium dark:text-white">
             Opening Hours
         </label>
         
@@ -25,18 +25,18 @@
                         <span class="absolute top-1/2 start-0.5 -translate-y-1/2 size-5 bg-white rounded-full shadow-xs transition-transform duration-200 ease-in-out peer-checked:translate-x-full">
                                                 </span>
                     </label>
-                    <label for="@camelDay" class="min-w-[80px] text-sm text-gray-700">@dayName</label>
+                    <label for="@camelDay" class="min-w-[80px] text-sm text-gray-700 dark:text-gray-200">@dayName</label>
 
                     <div class="max-w-32">
                         <input asp-for="OpeningHours[@i].Start" type="time"
-                               class="border py-1.5 sm:py-1 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" />
+                               class="border py-2.5 sm:py-3 px-4 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" />
                     </div>
                     
                     <span class="text-sm text-gray-500">to</span>
 
                     <div class="max-w-32">
                         <input asp-for="OpeningHours[@i].End" type="time"
-                               class="border py-1.5 sm:py-1 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" />
+                               class="border py-2.5 sm:py-3 px-4 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" />
                     </div>
                 </div>
             }
