feature (infra): Add working form + infrastructure for the CRUD.

--- a/LiveMapDashboard.Web/Views/_ViewImports.cshtml
+++ b/LiveMapDashboard.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@using LiveMapDashboard.Web
 @using LiveMapDashboard.Web.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, LiveMapDashboard.Web
 
 @using LiveMapDashboard.Web.Options
 @using Microsoft.Extensions.Options
